<resources>
    <string name="app_name">Androidphotos</string>
    <string name="albums">Albums</string>
    <string name="create_new_album">Create New Album</string>
    <string name="search_for_photos">Search for Photos</string>
    <string name="create_or_rename_album">Create Album</string>
    <string name="back">Back</string>
    <string name="album_name">Album Name</string>
    <string name="example_album">example album</string>
    <string name="confirm_or_create">Confirm</string>
    <string name="date_range">Date Range:</string>
    <string name="tags">Tags:</string>
    <string name="date_range_format_hint">MM/DD/YYYY - MM/DD/YYYY</string>
    <string name="tags_hint">Ex. person=sesh</string>
    <string name="search">Search</string>
    <string name="rename">Rename</string>
    <string name="view_slideshow">View Slideshow</string>
    <string name="add_photo">Add Photo</string>
    <string name="delete_button">Delete button</string>
    <string name="add_photo">Add Photo</string>
    <string name="button">Button</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_from_phone">Select From Phone</string>
    <string name="save">Save</string>
    <string name="photo_to_add">photo to add</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="save">Save</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="move_to_another_album">Move to Another Album</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="move_photo">Move Photo</string>
    <string name="select_album_to_move_to">Select Album to Move to:</string>
    <string name="move">Move</string>
</resources>