<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/backButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/backButton2"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="false"
            android:layout_centerInParent="true"
            android:text="@string/search_for_photos"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginEnd="20sp"
            android:text="@string/date_range"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTextPersonName2"
            android:text="@string/tags"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTextPersonName2"
            android:layout_toEndOf="@id/textView2"
            android:ems="10"
            android:hint="@string/tags_hint"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_toEndOf="@id/textView2"
            android:ems="10"
            android:hint="@string/date_range_format_hint"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <ListView
            android:id="@+id/searchResultsList"
            android:layout_width="match_parent"
            android:layout_height="449dp"
            android:layout_below="@id/editTextTextPersonName" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/searchResultsList"
            android:text="@string/search" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>