<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:text="@string/back" />

    <ImageView
        android:id="@+id/slideshowImageView"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_marginTop="142dp"
        android:contentDescription="@string/photo_to_add"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/prevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="489dp"
        android:text="@string/prev" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="551dp"
        android:text="@string/next" />
</RelativeLayout>