<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <Button
            android:id="@+id/albumBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/back" />

        <ImageButton
            android:id="@+id/deleteAlbumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:contentDescription="@string/delete_button"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <Button
            android:id="@+id/renameAlbumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_toStartOf="@id/deleteAlbumButton"
            android:text="@string/rename_album" />

        <GridView
            android:id="@+id/photosGrid"
            android:layout_width="match_parent"
            android:layout_height="264dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="false"
            android:layout_marginTop="75sp"
            android:listSelector="@android:drawable/list_selector_background" />

        <Button
            android:id="@+id/addPhotoButton"
            android:layout_width="226dp"
            android:layout_height="55dp"
            android:layout_below="@id/photosGrid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50sp"
            android:text="@string/add_photo" />

        <Button
            android:id="@+id/slideshowButton"
            android:layout_width="226dp"
            android:layout_height="55dp"
            android:layout_below="@id/addPhotoButton"
            android:layout_centerHorizontal="true"
            android:text="@string/view_slideshow" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>